# novel-bot

./: .env.example  .gitignore  README.md  README_zh-CN.md  pyproject.toml  requirements.txt
novel_bot/: __main__.py
novel_bot/agent/: context.py  loop.py  memory.py  provider.py  skills.py  sync_runner.py  tools.py
novel_bot/cli/: main.py
novel_bot/config/: settings.py
novel_bot/skills/chapter-writer/: SKILL.md
novel_bot/skills/skill-creator/: SKILL.md
novel_bot/skills/story-design/: SKILL.md
novel_bot/skills/summarize/: SKILL.md
novel_bot/skills/writer-tools/: SKILL.md
