[project]
name = "novel-bot"
version = "0.1.0"
description = "AI-powered novel writing assistant"
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
novel-bot = "novel_bot.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["novel_bot"]
